# home-api

./: .env.example  .gitignore  Dockerfile  README.md  main.py  project_structure  pyproject.toml  requirements.txt
app/api/v1/: __init__.py
app/api/v1/endpoints/: coffee.py
app/core/: config.py
app/models/: coffee.py
app/utils/: postgres.py
